tests/ui/specialization/min_specialization/bad-const-wf-doesnt-specialize.stderr
error: the constant `N` is not of type `usize`
  --> $DIR/bad-const-wf-doesnt-specialize.rs:8:29
   |
LL | impl<const N: i32> Copy for S<N> {}
   |                             ^^^^ expected `usize`, found `i32`
   |
note: required by a bound in `S`
  --> $DIR/bad-const-wf-doesnt-specialize.rs:6:10
   |
LL | struct S<const L: usize>;
   |          ^^^^^^^^^^^^^^ required by this bound in `S`

error: aborting due to previous error

